# NumericalAlgos

./: .gitignore  README.md  Readme.md  pyproject.toml
.github/workflows/: python-package.yml
Algos/: GaussianElemination.py
Algos/LinearSystems/: GaussianElemination.py
dhavalgos/linearsystems/: GaussianElemination.py
dhavalgos/odes/: euler.py
notebooks/odes/: forward_euler.ipynb
notebooks/odes/.ipynb_checkpoints/: forward_euler-checkpoint.ipynb
tests/: test_GaussianElimination.py  test_ode_fe.py
