[tool.poetry]
name = "numericalalgos"
version = "0.1.0"
description = ""
authors = ["Dhavaleswar <93dhavaleshwar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
scipy = "^1.11.3"
pandas = "^2.1.1"
sympy = "^1.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
